--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,9 +2,9 @@ version: "3"
 
 tasks:
   build:
-    desc: Build the project
+    desc: Build the dummy-discovery client example
     cmds:
-      - go build -v -ldflags '{{.LDFLAGS}}'
+      - go build -o dist/dummy -v -ldflags '{{.LDFLAGS}}' ./dummy-discovery
 
 vars:
   PROJECT_NAME: "dummy-discovery"
@@ -14,5 +14,5 @@ vars:
   TIMESTAMP:
     sh: echo "$(date -u +"%Y-%m-%dT%H:%M:%SZ")"
   LDFLAGS: >
-    -X github.com/arduino/dummy-discovery/version.Tag={{.VERSION}}
-    -X github.com/arduino/dummy-discovery/version.Timestamp={{.TIMESTAMP}}
+    -X github.com/arduino/dummy-discovery/dummy-discovery/args.Tag={{.VERSION}}
+    -X github.com/arduino/dummy-discovery/dummy-discovery/args.Timestamp={{.TIMESTAMP}}
